# magic-clipboard

./: LICENSE  README.md  main.py  pyproject.toml  style_guide.txt
